--- a/popup.html
+++ b/popup.html
@@ -33,6 +33,7 @@
     <div class="container">
     <img src='logo.png'>
     <h4>'version 1.0'</h4>
+    <p>Customize your Shamelist <span style="font-size:10px"> ©</span> options <br>in your Extensions tab<p>
     <p>Developed by:<br> 
       Brian Rudloff and David Marx</p>
      <img src='founders.jpg'>
