with reconfig custom shamelist

--- a/popup.html
+++ b/popup.html
@@ -10,7 +10,7 @@
     <style>
       body {
         font-family: Arial, Helvetica, sans-serif;
-        font-size: 100%;
+        font-size: 80%;
         color:rgb(255,75,122);
         background-color: white;
       }
@@ -33,7 +33,7 @@
     <div class="container">
     <img src='logo.png'>
     <h4>'version 1.0'</h4>
-    <p>Customize your Shamelist <span style="font-size:10px"> ©</span> options <br>in your Extensions tab<p>
+    <p style="color:black"> Customize your Shamelist <span style="font-size:10px"> ©</span> options <br>in your Extensions tab<p>
     <p>Developed by:<br> 
       Brian Rudloff and David Marx</p>
      <img src='founders.jpg'>
